# Udacity-Self-Driving-Car-Nanodegree

./: .gitignore  README.md
challenges/: udacity_sdcnd.rviz
challenges/challenge2/: main.py
docker/: Dockerfile  clean_images.sh
environment/: environment.yml  setup.sh
term1/exercises/AlexNet-Lab/: download_data_and_weights.sh  feature_extraction.py  traffic_sign_inference.py  train_feature_extraction.py
term1/exercises/CarND-Keras-Lab/: traffic-sign-classification-with-keras.ipynb
term1/exercises/CarND-TensorFlow-Lab/: README.MD  lab.ipynb
term1/exercises/transfer-learning-lab/: feature_extraction.py
term1/project1/CarND-LaneLines-P1/: P1.ipynb
term1/projects/CarND-TrafficSigns-P2/: Traffic_Signs_Recognition.ipynb  Traffic_Signs_Recognition_23112016.ipynb
term1/projects/CarND-TrafficSigns-P2/model/20161124_203000/: checkpoint
term1/projects/CarND-TrafficSigns-P2/submission/: report.html
term1/projects/CarND-TrafficSigns-P2/test_img/: test_img.csv
term1/projects/p2-traffic-signs/test_img/: test_img.csv
term1/projects/p3-behavioral-cloning/: README.md  download_material.sh  drive.py  model.py  preprocess_input.py  tests.ipynb
term1/projects/p3-behavioral-cloning/models/e1/: model.h5  model.json
term1/projects/p4-advanced-lane-finding/: README.md  p4-advanced-lane-finding.ipynb
term1/projects/p5-vehicle-detection/: README.md  p5-vehicle-detection.ipynb
term1/projects/project3-behavioral-cloning/: README.md
term2/projects/p1-extended-kalman-filter/: CMakeLists.txt
term2/projects/p1-extended-kalman-filter/include/: FusionEKF.h  constants.h  fusion_ekf.h  kalman_filter.h  measurement_model.h  measurement_model_lidar.h  measurement_model_radar.h  motion_model.h  tools.h
term2/projects/p1-extended-kalman-filter/src/: FusionEKF.cpp  fusion_ekf.cpp  ground_truth_package.h  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_model.cpp  measurement_model_lidar.cpp  measurement_model_radar.cpp  measurement_package.h  motion_model.cpp  tools.cpp  tools.h
term2/projects/p1-extended-kalman-filter/tests/: CMakeLists.txt  tools_test.cpp
term2/projects/p2-unscented-kalman-filter/: CMakeLists.txt
term2/projects/p2-unscented-kalman-filter/include/: fusion_ukf.h  ground_truth_package.h  measurement_model.h  measurement_model_lidar.h  measurement_model_radar.h  measurement_package.h  motion_model.h  state_vector.h  tools.h  ukf.h
term2/projects/p2-unscented-kalman-filter/src/: fusion_ukf.cpp  main.cpp  measurement_model_lidar.cpp  measurement_model_radar.cpp  motion_model.cpp  tools.cpp  ukf.cpp
term2/projects/p3-particle-filter/: CMakeLists.txt
term2/projects/p3-particle-filter/src/: main.cpp  map.h  particle_filter.cpp
term2/projects/p4-pid-controller/: CMakeLists.txt  README.md  REFLECTION.md  pid_config.txt
term2/projects/p4-pid-controller/src/: PID.cpp  PID.h  main.cpp
term2/projects/p5-model-predictive-control/: CMakeLists.txt  README.md  WRITE_UP.md  build.sh  run.sh
term2/projects/p5-model-predictive-control/include/: MPC.h  actuators.h  mpc_model.h  optimizer.h  tools.h
term2/projects/p5-model-predictive-control/src/: MPC.cpp  MPC.h  main.cpp  mpc_model.cpp  optimizer.cpp  tools.cpp
term3/projects/p1-path-planning/: CMakeLists.txt  Model Documentation.md  WRITE_UP.md  build.sh  install-ubuntu.sh  run.sh  tests.sh
term3/projects/p1-path-planning/include/: behavior_planner.h  ego_vehicle_data.h  egovehiclefrenet.h  map.h  map_data.h  path_planner.h  sensor_fusion_data.h  trajectory_generator.h  utils.h  vehicle.h
term3/projects/p1-path-planning/src/: behavior_planner.cpp  main.cpp  map.cpp  path_planner.cpp  trajectory_generator.cpp  utils.cpp  vehicle.cpp
term3/projects/p1-path-planning/tests/: CMakeLists.txt  utils_tests.cpp
term3/projects/p1-path-planning/tools/: jmt_playground.ipynb
term3/projects/p2-semantic-segmentation/: README.md  helper.py  main.py
term3/projects/p2-semantic-segmentation/setup/: environment.yml  setup.sh  setup_gpu.sh
term3/quizzes/BehaviorExercise/: road.py  simulate_behavior.py  vehicle.py
term3/quizzes/PredictionExercise/: classifier.py  prediction.py
term3/quizzes/TrajectoryExercise1/: evaulate_quintic.py  quintic.py
term3/quizzes/TrajectoryExercise2/: cost_functions.py  evaluate_ptg.py  ptg.py
term3/quizzes/TrajectoryHybridExercise/: hybrid_breadth_first.py  test_search.py
